add horizontal progress bar

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -30,4 +30,5 @@
     <string name="java">Java</string>
     <string name="kotlin">Kotlin</string>
     <string name="accept">accept</string>
+    <string name="ok">OK</string>
 </resources>
