--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -31,4 +31,5 @@
     <string name="kotlin">Kotlin</string>
     <string name="accept">accept</string>
     <string name="ok">OK</string>
+    <string name="sleep" />
 </resources>
